adding jotstack to names and result ui and create virtual keyboard